# homely-vibes

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  _config.yml  agents.md  conftest.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: agent-review.yml  lint.yml  pages.yml  test.yml
August/: README.md  __init__.py  august_client.py  august_manager.py  pyproject.toml  test_august.py  test_august_client.py  test_battery_status.py  validate_2fa.py
Bimpop.ai/app/: queries.py  utils.py
Bimpop.ai/fe/: utils.py
BimpopAI/aiy_hat/: aiy_runner.py  auth_helpers.py
BimpopAI/app/: indexer.py  main.py  queries.py  utils.py
BimpopAI/fe/: streamlit_app.py  utils.py
BrowserAlert/: README.md  alert_me.py
GPXParser/: 10_tre-le-champs_to_flegere.gpx  4_elisabetta-courmayeur.gpx  README.md  append_numbered_files.py  v9a_col_de_la_forclaz_to_col_de_balme__via_les_grands_.gpx
GPXParser/TMB_original/: 11_flegere_to_les_houches.gpx  1_les_houches-les_contamines.gpx  2_les_contamines-les_chapieux.gpx  5_courmayeur-bonatti.gpx  6_bonatti_to_la_fouly.gpx  8_champex-trient.gpx  9_trient_to_tre-le-champs.gpx
GPXParser/TMB_variants/: v10b-c_tete_aux_vents-flegere__via_lac_blanc_.gpx  v1a-b_les_houches-contamines__via_miage_.gpx  v1c_les_houches_to_col_de_voza__via_le_prarion_.gpx  v2_les_contamines_to_nant_borrant__via_tre-la-tete_.gpx  v3a-bonhomme-mottets__via_four_.gpx  v4c_maison_vieille_to_courmayeur__via_rifugio_monte_bianco_.gpx  v5b_bertone_to_bonatti__via_mont_de_la_saxe_.gpx  v8_champex-forclaz__via_arpette_.gpx  v9c_col_de_balme_to_tre-le-champs__via_le_tour_.gpx
GPXParser/inputs/: 3_les_chapieux-elisabetta.gpx  7_la_fouly-champex.gpx  v10a_tre-le-champ_to_tete_aux_vents__ladder_free_.gpx  v4b_combal_to_courmayeur__via_val_veny_.gpx  v5a_courmayeur_to_arnouva.gpx  v9b_le_peuty_to_col_de_balme__via_croix_de_fer_.gpx
GPXParser/outputs/: combined_route.gpx
GarageCheck/: README.md  TFOneShot.py  check_garage_door.py  transferlearn_on_imagenet.py
JWTs/: README.md  extract_har_tokens_simple.py
LambdaEmailFwder/: Readme.md  index-pensieves.js  index.js  package.json
LaunchJobs/: README.md  __init__.py  launchjobs.py  notify.py  plist_template.py  test_launchjobs.py
LaunchJobs/jobs/: __init__.py  registry.py  whatsapp_summary.py
LaunchJobs/scripts/: run_whatsapp_summary.sh  whatsapp_summary_job.py
NetworkCheck/: EmailMyIP.py  README.md  external_ip_reporter.py  test_uplink.py
NoShorts/: README.md  V2_PRD.md  V2_REMEDIATION_PLAN.md  V2_SCOPING_ARCHIVE.md
NoShorts/NoShorts/: ContentView.swift  DoHResolver.swift  LocalProxy.swift  NoShortsApp.swift
NoShorts/NoShorts.xcodeproj/: project.pbxproj
NoShorts/NoShorts/Assets.xcassets/AppIcon.appiconset/: Contents.json
NoShorts/scripts/: build_ipa.sh
NodeCheck/: README.md  check_hw_specs.py  check_nodes.py  conftest.py  heartbeat_nodes.py  manage_nodes.py  nodes.py  purge_old_foscam_files.py  test_check_nodes.py  test_heartbeat_nodes.py  test_nodes.py
OpenAIAdmin/: create_openai_projects.py
PersonalCalSync/: README.md  calendar-sync.gs
RachioFlume/: README.md  TESTABILITY.md  alert_engine.py  alert_rules.py  collector.py  data_storage.py  flume_client.py  hose_timer_processor.py  main.py  rachio_client.py  rachio_hose_client.py  reporter.py  rfmanager.py  simulate_alerts.py  stale_zone_checker.py  synthetic_data.py  test_alert_engine.py  test_alert_rules_helpers.py  test_alert_simulation.py  test_flume_auth.py  test_flume_client.py  test_hose_timer.py  test_integration.py  test_stale_zone_checker.py  test_zone_thresholds.py
RachioFlume/scripts/: remote-test.sh
Rheem/: README.md  rheem_client.py  rheem_manager.py  test_rheem_client.py
RingBeams/: README.md  beams_manager.py  fetch_status.js  package-lock.json  package.json  test_beams_manager.py
RingSecurity/: README.md  ring_manager.py  test_ring_manager.py
SamsungFrame/: CLAUDE.md  README.md  __init__.py  batch_upload.py  manage_samsung.py  samsung_client.py  test_batch_upload.py  test_manage_samsung.py  test_samsung_client.py  upload_tracker.py
Tesla/: README.md  manage_power.py  tesla_async_apis.py  tesla_auth.py  tesla_auth_manual.py  tesla_client.py  test_manage_power.py  test_tesla_client.py
VSCodeSidebarNotes/: CHANGELOG.md  README.md  package-lock.json  package.json
VSCodeSidebarNotes/media/: main.css  main.js
VSCodeSidebarNotes/src/: extension.ts  notesProvider.ts
VoiceNotes/: DESIGN.md  README.md  __init__.py  hotkey.py  recorder.py  test_voice_notes.py  transcriber.py  voice_notes.py  writer.py
WaterParser/: PumpReport.py  PumpStatsWriter.py  TuyaLogParser.py  compute_pump_stats.py
config/: default.yaml  synthetic_alerts.yaml  tokens
lib/: Constants.py.sample  Constants_sample.py  FoscamImager.py  Mailer.py  MyPushover.py  MyTwilio.py  NetHelpers.py  README.md  config.py  file_lock.py  logger.py  notifications.py  secure_io.py  test_file_lock.py  test_secure_io.py  tokens
